[#140641937] Fix hacky video-arrow alignment

--- a/app/assets/stylesheets/sephora_style_guide/partials/_video.scss
+++ b/app/assets/stylesheets/sephora_style_guide/partials/_video.scss
@@ -59,7 +59,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -5px;
 
     @include media-breakpoint-down(md) {
       margin-top: 5px;
@@ -71,36 +70,27 @@
       text-transform: uppercase;
       font-size: 14px;
       line-height: 18px;
+      margin-left: 20px;
+      margin-top: 10px;
 
       @include media-breakpoint-down(md) {
-        width: 90%;
-      }
-    }
-
-    .video-link-icon {
-      width: 40px;
-      height: 40px;
-      margin-left: -12px;
-      margin-bottom: 3px;
-      background: transparent;
-
-      @include media-breakpoint-between(sm, md) {
-        position: absolute;
-        right: 70px;
-        margin-top: 8px;
+        width: 85%;
+        margin-left: 5px;
       }
 
-      @include media-breakpoint-down(sm) {
-        position: absolute;
-        right: -3px;
-        bottom: 2px;
+      &:after {
+        content: '';
+        background: asset-url('/assets/sephora_style_guide/video-arrow.svg');
+        width: 15px;
+        height: 15px;
+        display: inline-block;
       }
     }
   }
 
   .video-play-icon {
     @extend %play-icon;
-    width: 60px;
+    width: 70px;
   }
 }
 
@@ -152,7 +142,7 @@
     width: 60px;
 
     @include media-breakpoint-down(sm) {
-      width: 80px;
+      width: 90px;
     }
   }
 }
@@ -192,7 +182,7 @@
     width: 40px;
 
     @include media-breakpoint-down(sm) {
-      width: 60px;
+      width: 70px;
     }
   }
 }
